<resources>
    <string name="app_name">GreatChow</string>
    <string name="preference_setting">Setting</string>
    <string name="default_lang">English</string>
    <string name="sys_setting">System Settings</string>
    <string name="personal_setting">Personal Settings</string>
    <string name="list1">edu.psu.bjx2020.greatchow.list1</string>
    <string name="list2">edu.psu.bjx2020.greatchow.list2</string>
    <string name="checkbox">edu.psu.bjx2020.greatchow.checkbox</string>
    <string name="title_activity_view_recipe">View Recipe</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="pref_diet">Diet</string>
    <string name="pref_diet_summary">Only show recipes that meet your diet restrictions</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_add_recipe">Add Recipe</string>

    <!--  Strings for Content  -->
    <string name="ingredients">Ingredients</string>
    <string name="add_image">Add Image</string>
    <string name="enter_ingredient">Enter Ingredient</string>
    <string name="add_new_ingredient">Add New Ingredient</string>
    <string name="process">Process</string>
    <string name="nutritional_information">Nutritional Information</string>
    <string name="enter_process_step">Enter Process Step</string>
    <string name="add_process_step">Add Process Step</string>
    <string name="enter_nutrition_info">Enter Nutrition Info</string>
    <string name="test">TEST</string>
    <string name="preference_add_recipe">Add recipe</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="enter_name_of_recipe">Enter name of Recipe</string>
    <string name="vegetarian">Vegetarian?</string>
    <string name="vegan">Vegan?</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="meal_schedule">Meal Schedule</string>
    <string name="plan_schedule">Meal Schedule</string>
    <string name="Schedule_meal">Schedule Meal</string>
    <string name="title_activity_select_recipe">Select Recipe</string>
    <string name="diet_notes">Diet Notes:</string>
    <string name="sign_out_setting">Sign Out</string>
    <string name="mainActivity">main activity</string>

    <string name="facebook_app_id">584681278824857</string>
    <string name="share_button">Share on Facebook</string>
</resources>
