<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/sys_setting">
        <ListPreference
                android:id="@+id/lList"
                android:key="language_preference"
                android:title="Language"
                android:entries="@array/Language"
                android:entryValues="@array/languageAlias"
                android:defaultValue="en-US"
        />
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/personal_setting">
        <ListPreference
            android:id="@+id/sList"
            android:key="sorting_preference"
            android:title="Sorting Attributes"
            android:entries="@array/sorting"
            android:entryValues="@array/sortingAttributes"
            android:defaultValue="Alp"/>

        <ListPreference
            android:id="@+id/vDiet"
            android:key="diet"
            android:title="@string/pref_diet"
            android:summary="@string/pref_diet_summary"
            android:defaultValue="1"
            android:entries="@array/diet_categories"
            android:entryValues="@array/diet_attributes"/>
    </PreferenceCategory>
</PreferenceScreen>