<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_add_recipe"
    tools:context=".AddRecipeActivity">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:srcCompat="?attr/colorAccent"
        android:id="@+id/recipe_picture_iv"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="500dp"
        tools:visibility="visible"
        app:srcCompat="@android:color/holo_purple" />

    <TextView
        android:text="@string/ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ingredients_title_tv"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/recipe_picture_iv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:textSize="30sp" />

    <Button
        android:text="@string/add_image_and_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_image_title_button"
        app:layout_constraintTop_toTopOf="@+id/recipe_picture_iv"
        app:layout_constraintBottom_toBottomOf="@+id/recipe_picture_iv"
        app:layout_constraintStart_toStartOf="@+id/recipe_picture_iv"
        app:layout_constraintEnd_toEndOf="@+id/recipe_picture_iv" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/enter_ingredient_et_1"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/ingredients_title_tv"
        app:layout_constraintStart_toStartOf="@+id/ingredients_title_tv"
        android:layout_marginStart="32dp"
        android:hint="@string/enter_ingredient" />

    <Button
        android:text="@string/add_new_ingredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_ingredient_button"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/enter_ingredient_et_1"
        app:layout_constraintStart_toStartOf="@+id/enter_ingredient_et_1" />

    <TextView
        android:text="@string/process"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/process_title_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/new_ingredient_button"
        android:layout_marginTop="16dp" />

    <TextView
        android:text="@string/nutritional_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nutrition_title_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:textSize="30sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/new_process_button" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/enter_process_et_1"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/process_title_tv"
        app:layout_constraintStart_toStartOf="@+id/process_title_tv"
        android:layout_marginStart="32dp"
        android:hint="@string/enter_process_step" />

    <Button
        android:text="@string/add_process_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_process_button"
        app:layout_constraintTop_toBottomOf="@+id/enter_process_et_1"
        app:layout_constraintStart_toStartOf="@+id/enter_process_et_1"
        android:layout_marginTop="16dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:gravity="start|top"
        android:ems="10"
        android:id="@+id/enter_nutrition_et"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/nutrition_title_tv"
        app:layout_constraintStart_toStartOf="@+id/nutrition_title_tv"
        android:layout_marginStart="32dp"
        android:hint="@string/enter_nutrition_info" />

</androidx.constraintlayout.widget.ConstraintLayout>