<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_view_recipe"
    tools:context=".ViewRecipeActivity">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:srcCompat="?attr/colorAccent"
        android:id="@+id/recipe_picture_iv"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="500dp"
        tools:visibility="visible"
        app:srcCompat="@android:color/holo_purple"
        android:contentDescription="@string/recipe_image" />

    <TextView
        android:text="@string/ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ingredients_title_tv"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/recipe_picture_iv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:textSize="30sp" />

    <TextView
        android:text="@string/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/ingredients_title_tv"
        app:layout_constraintStart_toStartOf="@+id/ingredients_title_tv"
        android:layout_marginStart="32dp"
        android:textSize="24sp" />

    <TextView
        android:text="@string/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        android:textSize="24sp" />

    <TextView
        android:text="@string/process"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/process_title_tv"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:textSize="30sp" />

    <TextView
        android:text="@string/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/process_title_tv"
        app:layout_constraintStart_toStartOf="@+id/process_title_tv"
        android:layout_marginStart="32dp"
        android:textSize="24sp" />

    <TextView
        android:text="@string/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        android:textSize="24sp" />

    <TextView
        android:text="@string/nutritional_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nutrition_title_tv"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:textSize="30sp" />

    <TextView
        android:text="@string/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView12"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/nutrition_title_tv"
        app:layout_constraintStart_toStartOf="@+id/nutrition_title_tv"
        android:layout_marginStart="32dp"
        android:textSize="24sp" />

    <TextView
        android:text="@string/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView13"
        app:layout_constraintBottom_toBottomOf="@+id/recipe_picture_iv"
        app:layout_constraintTop_toTopOf="@+id/recipe_picture_iv"
        app:layout_constraintStart_toStartOf="@+id/recipe_picture_iv"
        app:layout_constraintEnd_toEndOf="@+id/recipe_picture_iv"
        android:textSize="36sp" />

</androidx.constraintlayout.widget.ConstraintLayout>